--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 MONGODB_URI=mongodb+srv://finding-movie:nika@nodetutorials.amp8imj.mongodb.net/?retryWrites=true&w=majority&appName=nodetutorials
 PORT=4000
-TMDB_API_KEY=a79cc02d2ddb86399a2f45f8ca8e1404
+TMDB_API_KEY="20448842c6dda672a24bf844d65b2ff7"
