--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,3 @@
-MONGODB_URI=mongodb+srv://finding-movie:nika@nodetutorials.amp8imj.mongodb.net/?retryWrites=true&w=majority&appName=nodetutorials
+MONGODB_URI=mongodb+srv://finding-movie:nika@nodetutorials.amp8imj.mongodb.net/movie-finding?retryWrites=true&w=majority
 PORT=4000
 TMDB_API_KEY="20448842c6dda672a24bf844d65b2ff7"
-OPENAI_API_KEY=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
