--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongo": "^0.1.0",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.7",
+    "natural": "^6.12.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9"
   }
