--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -101,6 +101,6 @@ jobs:
             sleep 10
             
             # Health check
-            curl -f http://localhost:4000 || exit 1
+            curl -f http://localhost:4000/health || exit 1
             
             echo "Backend deployed successfully!"
