--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v25
+        uses: amondnet/vercel-action@v20
         with:
           # Vercel authentication
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
@@ -51,3 +51,6 @@ jobs:
           # GitHub integration
           github-token: ${{ secrets.GITHUB_TOKEN }}
           github-comment: false
+          
+          # Scope and alias
+          vercel-scope: ${{ secrets.VERCEL_ORG_ID }}
